[package]
name = "sommelier_steward"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
default-members = [
	"steward",
]
members = [
	"steward",
]

[dependencies]
lazy_static = "1.4.0"
steward = { path = "./steward" }
