[package]
name = "sommelier_steward"
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
default-members = [
	"steward",
	"steward_abi",
	"steward_abi_build",
	"steward_proto_rust",
	"steward_proto_rust_build",
]
members = [
	"steward",
	"steward_abi",
	"steward_abi_build",
	"steward_proto_rust",
	"steward_proto_rust_build",
]

[dependencies]
lazy_static = "1.4.0"
steward = { path = "./steward" }
steward_abi = { path = "./steward_abi" }
steward_abi_build = { path = "./steward_abi_build" }
steward_proto = { path = "./steward_proto_rust" }
steward_proto_rust_build = { path = "./steward_proto_rust_build" }
