[workspace]
members = [".", "crates/steward-proto"]
default-members = ["."]
exclude = ["server-test"]
resolver = "2"

[workspace.package]
version = "4.3.0-pre"
edition = "2021"

[workspace.dependencies]
prost = "0.13"
serde = { version = "1.0", features = ["serde_derive"] }
tonic = { version = "0.12", features = [
    "codegen",
    "tls",
    "transport",
    "server",
] }

[package]
name = "steward"
authors = ["Collin Brittain", "Eric Bolten", "Ukpai Ugochi", "Zaki Manian"]
version.workspace = true
edition.workspace = true
rust-version = "1.76.0"

[dependencies]
abscissa_tokio = { version = "0.8.0", features = ["actix"] }
bip32 = "0.2"
bytes = "1.0"
clap = "4"
clarity = "0.4.12"
cosmos-sdk-proto-althea = "0.18.0"
deep_space = "2.27.4"
ethers = "2.0.14"
futures = "0.3"
gravity_bridge = { git = "https://github.com/PeggyJV/gravity-bridge", rev = "86a3d5760a566225fca493a6c40aec8a9e069c4f" }
hex = "0.4"
http = "1"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full", "http2"] }
hyper-util = { version = "0.1.10", features = ["http2", "server", "tokio"] }
iqhttp = { version = "0.1", features = ["json"] }
k256 = { version = "0.9", features = ["pem"] }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
pkcs8 = { version = "0.7", features = ["pem"] }
prost.workspace = true
prost-types = "0.13"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.0"
regex = "1.5.4"
rpassword = "5"
serde.workspace = true
serde_json = "1.0.64"
sha2 = "0.9"
sha3 = "0.10.6"
signatory = "0.23.0-pre"
somm_proto = { git = "https://github.com/PeggyJV/sommelier", rev = "0a72dcd66d96c2b24145f60a8e474f7e998efff3" }
steward-proto = { path = "crates/steward-proto" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "fs"] }
toml = { version = "0.5" }
tonic.workspace = true
tonic-reflection = "0.12.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["util", "add-extension"] }
url = "2.2.2"
lazy_static = "1.4.0"

# this is a dirty trick, we depent transitively on OpenSSL it's never
# called directly in this crate, but if we specify this dep we can enable
# this feature for all the crates in our dependency tree which depend on
# this crate. This allows for easy cross compiled builds because the 'vendored'
# feature includes it's own OpenSSL version that's compiled on the fly
# If ANY crate in this workspace has this it will work for all of them.
openssl = { version = "=0.10.71", features = ["vendored"] }
once_cell = "1.10.0"
reqwest = "0.11.14"
rustls = "0.23"
x509-parser = { version = "0.14.0", features = ["verify"] }
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
tokio-util = "0.7.7"
addr = "0.15.6"
openssl-sys = "0.9.106"
openssl-probe = "0.1.6"
num256 = "0.6.0"
ethers-gcp-kms-signer = "0.1.5"
async-trait = "0.1.88"


[dependencies.abscissa_core]
version = "0.8.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.8.1", features = ["testing"] }
assay = "0.1"
hex = "0.4.3"
once_cell = "1.2"
tempdir = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
ethers = "2.0.14"
hex = "0.4"
merkle_hash = "3.6"
prost-build = "0.13"
tonic = { version = "0.12", features = ["codegen", "tls", "transport"] }
tonic-build = "0.12"
walkdir = "2.3.2"
