[package]
name = "cellar_rebalancer"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
abscissa_tokio = "=0.6.0-beta.1"
bip32 = "0.2"
bson = {version = "2.0.0-beta.2", features = ["chrono-0_4"]}
bytes = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.5"
clarity = "0.4.12"
deep_space ={git="https://github.com/iqlusioninc/deep_space/", branch="master"}
ethers = {version ="0.6.1", features=["abigen"]}
futures = "0.3"
gravity_bridge = {git="https://github.com/PeggyJV/gravity-bridge"}
gumdrop = "0.7"
hyper = "0.14.12"
iqhttp = { version = "0.1", features = ["json"] }
k256 = { version = "0.9", features = ["pem"] }
mongodb = "2.0.0-beta.2"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
pkcs8 = { version = "0.7", features = ["pem"] }
prost = "0.7"
prost-types = "0.7"
rand_core = { version = "0.6", features = ["std"] }
rebalancer_abi = {path = "../rebalancer_abi"}
regex = "1.5.4"
rpassword = "5"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.64"
sha2 = "0.9"
signatory = "0.23.0-pre"
thiserror = "1"
tokio ={version ="1", features = ["macros"]}
toml = { version = "0.5" }
tower = { version = "0.4", features = ["buffer", "util"] }
uniswap_v3_sdk ={git ="https://github.com/PeggyJV/uniswap_sdk_rs",branch = "main"}

[dependencies.abscissa_core]
version = "0.6.0-beta.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0-beta.1", features = ["testing"] }
once_cell = "1.2"
