[package]
name = "steward"
authors = []
version = "2.1.2"
edition = "2018"

[dependencies]
tempdir = "0.3.7"
abscissa_tokio = "0.6.0"
bip32 = "0.2"
bson = { version = "2.0.0-beta.2", features = ["chrono-0_4"] }
bytes = "1.0"
chrono = "0.4"
clap = "3"
clarity = "0.4.12"
deep_space ={ git = "https://github.com/iqlusioninc/deep_space/", branch = "master" }
ethers = { git = "https://github.com/iqlusioninc/ethers-rs.git", branch="zaki/error_abi_support", features = ["abigen"] }
futures = "0.3"
gravity_bridge = { git = "https://github.com/PeggyJV/gravity-bridge", branch = "main" }
gumdrop = "0.7"
hex = "0.4"
hyper = "0.14.12"
iqhttp = { version = "0.1", features = ["json"] }
k256 = { version = "0.9", features = ["pem"] }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
pkcs8 = { version = "0.7", features = ["pem"] }
prost = "0.7"
prost-types = "0.7"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.0"
regex = "1.5.4"
rpassword = "5"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.64"
sha2 = "0.9"
signatory = "0.23.0-pre"
somm_proto = { git = "https://github.com/PeggyJV/sommelier" }
steward_abi = { path = "../steward_abi" }
steward_proto = { path = "../steward_proto_rust" }
thiserror = "1"
tokio ={ version = "1", features = ["macros", "fs"] }
toml = { version = "0.5" }
tonic = { version = "0.4.3", features = ["codegen", "tls", "transport"] }
tonic-reflection = "0.1.0"
tower = { version = "0.4", features = ["buffer", "util"] }
url = "2.2.2"
lazy_static = "1.4.0"

# this is a dirty trick, we depent transitively on OpenSSL it's never
# called directly in this crate, but if we specify this dep we can enable
# this feature for all the crates in our dependency tree which depend on
# this crate. This allows for easy cross compiled builds because the 'vendored'
# feature includes it's own OpenSSL version that's compiled on the fly
# If ANY crate in this workspace has this it will work for all of them.
openssl = { version = "=0.10.33", features = ["vendored"] }
openssl-sys = "=0.9.61"
openssl-probe = "0.1.4"


[dependencies.abscissa_core]
version = "0.6.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"
